# ffsim-benchmark

./: .gitignore  README.md  asv.conf.json  asv.conf.multi.json  index.json  info.json  plot.ipynb  plot.py  pyproject.toml  regressions.json  regressions.xml  run-benchmarks.sh
.asv/results/: benchmarks.json
benchmarks/: fermion_operator.py  gates.py  linear_operator.py  rust.py  trotter.py  variational.py
benchmarks/qiskit_sim/: bogoliubov_transform.py  linalg.py  low_rank.py  random_utils.py  swap_network.py  trotter.py  trotter_test.py
graphs/summary/: fermion_operator.FermionOperatorBenchmark.time_normal_order_ffsim.json  fermion_operator.FermionOperatorBenchmark.time_normal_order_openfermion.json  gates.GatesBenchmark.time_apply_diag_coulomb_evolution.json  gates.GatesBenchmark.time_apply_diag_coulomb_evolution_ffsim.json  gates.GatesBenchmark.time_apply_givens_rotation.json  (+44 more)
scripts/: compare-zdrot.sh  plot.py  plot_bar.py  plot_benchmarks.py  plot_extra.py  plot_gates.py  plot_jordan_wigner.py  plot_sim.py  plot_sim_combined.py  plot_sim_multi.py  plot_sim_single.py  plot_slater.py  run-benchmarks-for-paper-existing.sh  run-benchmarks-for-paper-native.sh  run-benchmarks-for-paper-skip-existing.sh  run-benchmarks-for-paper.sh  run-benchmarks-jw.sh  run-benchmarks-normal-order.sh  run-benchmarks-on-mac-native.sh  run-benchmarks-on-mac.sh  run-benchmarks-sim.sh  run-benchmarks-single-threaded.sh  run-benchmarks-slater.sh  run-benchmarks-trotter.sh  run-benchmarks.sh  table.py
src/ffsim_benchmark/: convert.py  (+17 more)
tests/: operator_action_test.py  random_test.py
(+6 files in other folders)
