[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core"]

[project]
name = "ffsim-benchmark"
version = "0.0.0"
description = "Benchmarks for ffsim"

dependencies = ["ffsim", "fqe", "qiskit-aer"]

[project.optional-dependencies]
dev = ["asv", "mypy", "pytest", "ruff == 0.6.2"]

[tool.ruff]
include = [
    "pyproject.toml",
    "src/**/*.py",
    "src/**/*.pyi",
    "tests/**/*.py",
    "tests/**/*.pyi",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "NPY"]
