[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core"]

[project]
name = "ffsim-benchmark"
version = "0.0.0"
description = "Benchmarks for ffsim"

dependencies = [
    "dppy>=0.3.3",
    "ffsim",
    "fqe",
    "qiskit-aer",
]

[project.optional-dependencies]
dev = ["asv", "mypy", "pytest", "ruff"]

[tool.ruff]
include = [
    "pyproject.toml",
    "src/**/*.py",
    "src/**/*.pyi",
    "tests/**/*.py",
    "tests/**/*.pyi",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "NPY"]

[tool.uv.sources]
ffsim = { path = "../ffsim", editable = true }
